--- a/SRC/Style.css
+++ b/SRC/Style.css
@@ -1,98 +1,172 @@
-body {
-  background: #f9f7fe;
-  font-family: "Roboto", sans-serif;
-}
-
-a {
-  color: #885df1;
-}
-
-.weather-app {
-  background: white;
-  max-width: 600px;
-  margin: 60px auto;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-}
-
-header {
-  border-bottom: 1px solid #f9f7fe;
-  padding-bottom: 30px;
-}
-
-.search-input {
-  background-color: #f9f7fe;
-  border: none;
-  color: rgba(39, 33, 66, 0.4);
-  font-size: 16px;
-  padding: 20px;
-  width: 75%;
-  border-radius: 6px;
-}
-
-.search-button {
-  margin-left: 5px;
-  font-size: 16px;
-  background-color: #885df1;
-  color: white;
-  border: none;
-  padding: 20px;
-  line-height: 1;
-  border-radius: 5px;
-}
-
-main {
-  padding: 30px 0;
-}
-
-.current-temperature {
-  font-size: 48px;
-}
-
-.current-weather {
-  display: flex;
-  justify-content: space-between;
-}
-
-.current-city {
-  font-size: 38px;
-  font-weight: 900;
+body,
+html {
   margin: 0;
-}
-.current-details {
-  color: rgba(39, 33, 66, 0.4);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
+  padding: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+  color: #f0f0f0;
 }
 
-.current-details strong {
-  color: #f65282;
+.background-video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  backdrop-filter: blur(40px);
 }
 
-.current-temperature-icon {
-  position: relative;
-  top: -8px;
-  font-size: 40px;
+#background-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.weather-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(20, 20, 20, 0.5);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+#cityInput {
+  padding: 10px 15px;
+}
+
+#search-form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+#search-form input {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
   margin-right: 10px;
 }
 
-.current-temperature-value {
-  font-size: 80px;
-  font-weight: bold;
+.submit {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: #444;
+  color: #f0f0f0;
+  cursor: pointer;
 }
 
-.current-temperature-unit {
-  font-size: 28px;
-  position: relative;
-  top: -38px;
+.submit :hover {
+  background-color: #565555;
 }
 
-footer {
-  border-top: 1px solid #f9f7fe;
+.location {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: #444;
+  color: #f0f0f0;
+  cursor: pointer;
+  margin-left: 10px;
+}
+.location :hover {
+  background-color: #565555;
+}
+
+#weather-info h1 {
+  display: flex;
+  margin: 0;
+  font-size: 2em;
+}
+#city-date {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: -400px;
+  margin-bottom: 20px;
+}
+
+#city {
+  margin: 0;
+  font-size: 70px;
+}
+
+#date {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+#icon img {
+  width: 500px;
+}
+
+#temperature,
+#icon {
+  display: flex-block;
+  margin-left: 100px;
+  top: -20px;
+  flex-direction: column;
+  display: inline;
+}
+
+#description {
+}
+#humidity {
+}
+#wind-speed {
+}
+#time {
+}
+
+.weather-forecast {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.weather-hourly-forecast,
+.weather-forecast-daily {
+  display: inline;
+  flex-wrap: wrap;
+  width: 100%;
   text-align: center;
-  padding-top: 15px;
+}
 
-  color: rgba(39, 33, 66, 0.4);
+.weather-forecast-day {
+  display: inline-block;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  text-align: center;
+}
+
+.weather-forecast-day {
+  width: calc(100% / 12 - 20px);
+}
+.weather-forecast-hour {
+  display: inline-block;
+  flex-direction: column;
+  align-items: center;
+  margin: 5px;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  text-align: center;
+}
+.weather-forecast-hour .weather-forecast-time,
+.weather-forecast-hour .weather-forecast-icon,
+.weather-forecast-hour .weather-forecast-temperature,
+.weather-forecast-day .weather-forecast-date,
+.weather-forecast-day .weather-forecast-icon,
+.weather-forecast-day .weather-forecast-temperatures {
+  margin: 5px 10px;
 }
